<resources>
    <string name="app_name">eCom-Seller</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="login_fragment_label">Login Fragment</string>
    <string name="signup_fragment_label">Signup Fragment</string>
    <string name="forgot_password_fragment_label">ForgetPasswrod Fragment</string>
    <string name="otp_fragment_label">Otp Fragment</string>
    <string name="signup_welcome_hello">Hello,</string>
    <string name="account_from_when_label">From</string>
    <string name="account_phone_number_label">Phone number</string>
    <string name="account_num_of_product_label">Product</string>
    <string name="account_review_label">Reviews</string>
    <string name="account_description_label">Description</string>
    <string name="signup_welcome_text">Sign Up!</string>
    <string name="account_shop_info_label">Shop information</string>
    <string name="signup_name_hint">USER NAME</string>
    <string name="shipping_exp_delivery_time_label_string">Expected delivery time</string>
    <string name="shipping_shipping_order_code_label_string">Shipping order code</string>
    <string name="signup_shop_name_hint">SHOP NAME</string>
    <string name="signup_shop_description_hint">SHOP DESCRIPTION</string>
    <string name="signup_mobile_hint">MOBILE</string>
    <string name="signup_password_hint">PASSWORD</string>
    <string name="signup_conf_password_hint">CONFIRM PASSWORD</string>
    <string name="signup_switch_tnc_label">I accept the policy and terms</string>
    <string name="signup_btn_text">Sign Up</string>
    <string name="signup_name_ph">Your Name</string>
    <string name="signup_shop_name_ph">Shop Name</string>
    <string name="signup_shop_description_ph">Shop Description</string>
    <string name="signup_mobile_ph">Your Mobile</string>
    <string name="signup_email_hint">E-Mail</string>
    <string name="signup_email_ph">Your email</string>
    <string name="signup_password_ph">Enter Password</string>
    <string name="signup_cnf_password_ph">Enter Password Again</string>
    <string name="signup_login_text">Already have an account? Log In</string>
    <string name="bg_img_desc">Image View</string>
    <string name="login_welcome">Welcome Back,</string>
    <string name="login_welcome_text">Log In!</string>
    <string name="login_mobile_hint">MOBILE NUMBER</string>
    <string name="login_mobile_ph">Enter mobile number</string>
    <string name="login_password_hint">PASSWORD</string>
    <string name="login_password_ph">Enter Password</string>
    <string name="login_switch_remember_text">Remember Me</string>
    <string name="login_btn_text">Log In</string>
    <string name="login_forgot_text">Forgot Password?</string>
    <string name="otp_label_text">Enter the OTP received on Registered Mobile Number</string>
    <string name="otp_otp_ph">6 Digit OTP</string>
    <string name="otp_verify_btn_text">VERIFY</string>
    <string name="otp_verify_error_text">Wrong OTP!</string>
    <string name="otp_message_1">One Step to go…</string>
    <string name="otp_message_2">O T P</string>
    <string name="login_error_text">Incorrect Mobile Number or Password</string>
    <string name="login_signup_text">New User? Sign Up</string>
    <string name="signup_seller_text">Do you wish to sell any products?</string>
    <string name="home_add_fab_desc">Add Product FAB</string>
    <string name="add_pro_name_label_text">Product Name</string>
    <string name="add_cate_name_label_text">Category Name</string>
    <string name="add_pro_price_label_text">Selling Price</string>
    <string name="add_num_pro_in_cate_label_text">Number of product in category</string>
    <string name="add_pro_mrp_label_text">MRP</string>
    <string name="add_pro_desc_label_text">Description</string>
    <string name="add_pro_sizes_label_text">Sizes Available</string>
    <string name="app_pro_btn_text">Add Product</string>
    <string name="app_pro_btn_save_text">Save Product</string>
    <string name="add_cate_btn_text">Add Category</string>
    <string name="pro_cat_dialog_title">Select Product Category</string>
    <string name="pro_cat_dialog_cancel_btn">Cancel</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="pro_cat_dialog_ok_btn">OK</string>
    <string name="add_pro_error_empty">Fill all the details!</string>
    <string name="add_pro_color_label_text">Colors Available</string>
    <string name="add_product_error_string">Fill all the details!</string>
    <string name="add_category_error_string">Fill all the details and add an image!</string>
    <string name="add_category_error_duplicated_name_string">Duplicated category name, please try another name</string>
    <string name="add_pro_error_price_string">Price can not be 0.</string>
    <string name="pro_item_price">Price: $%d</string>
    <string name="product_detail_image_desc">Product Image</string>
    <string name="pro_details_like_btn_desc">Like Button</string>
    <string name="pro_details_select_size_lable_text">Select Size</string>
    <string name="pro_details_select_color_label_text">Select Color</string>
    <string name="pro_details_specif_label_text">Descriptions</string>
    <string name="pro_reviews_label_text">Product reviews</string>
    <string name="pro_details_information_label_text">Detailed information</string>
    <string name="pro_details_price_value">$%s</string>
    <string name="pro_details_actual_strike_value">$%s</string>
    <string name="add_pro_images_label_text">Product Images (Max: 3)</string>
    <string name="add_cate_images_label_text">Category Images (Max: 1)</string>
    <string name="search_app_bar_title">Search</string>
    <string name="content_description_search">Search Icon</string>
    <string name="more_app_bar_title">More</string>
    <string name="content_description_more">More Icon</string>
    <string name="add_img_item_desc">Image Item</string>
    <string name="add_img_close_btn_desc">Image Remove Button</string>
    <string name="add_product_error_img_upload">Error uploading Images, Try Again!</string>
    <string name="product_actual_price_text"><strike>$1000.00</strike></string>
    <string name="product_offer_percent_text">25% Off</string>
    <string name="pro_offer_precent_text">%s%% Off</string>
    <string name="delete_dialog_title_text">Are you sure?</string>
    <string name="delete_dialog_message_text">On proceeding, Product : %s will be deleted.</string>
    <string name="delete_dialog_delete_btn_text">Delete</string>
    <string name="edit_product_btn_text">Save Changes</string>
    <string name="home_app_bar_search_label">Search</string>
    <string name="home_app_bar_filter_label">Filter</string>
    <string name="search_hint">Search Product…</string>
    <string name="search_placeholder_text">Search Product</string>
    <string name="search_order_placeholder_text">Search Orders</string>
    <string name="search_category_placeholder_text">Search Category</string>
    <string name="add_product_insert_error">Error Saving Product!</string>
    <string name="app_icon_img_desc">App Icon</string>
    <string name="pro_details_add_to_cart_btn_text">Add To Cart</string>
    <string name="pro_details_go_to_cart_btn_text">Go To Cart</string>
    <string name="pro_details_delete_btn_desc">Remove Product Button</string>
    <string name="cart_check_out_btn">Check Out</string>
    <string name="price_card_items_string">Items(%s)</string>
    <string name="price_card_shipping_label_string">Shipping</string>
    <string name="price_card_charges_label_text">Import Charges</string>
    <string name="price_card_divider_desc">Divider Line</string>
    <string name="cart_fragment_label">Your Cart</string>
    <string name="next_btn_text">Next</string>
    <string name="edit_btn_text">Edit</string>
    <string name="quick_edit_btn_text">Quick edit</string>
    <string name="delete_btn_text">Delete</string>
    <string name="ship_to_title">Ship To</string>
    <string name="add_menu_item_title">Add</string>
    <string name="add_address_btn_text">Add Address</string>
    <string name="add_category_btn_text">Add Category</string>
    <string name="save_address_btn_text">Save Address</string>
    <string name="price_card_total_label_text">Total Price</string>
    <string name="price_card_subtotal_label_text">Subtotal Price</string>
    <string name="price_text">$%s</string>
    <string name="add_address_country_label_text">Country or region</string>
    <string name="add_address_first_name_label_text">First Name</string>
    <string name="add_address_last_name_label_text">Last Name</string>
    <string name="add_address_street_add_label_text">Street Address</string>
    <string name="add_address_street_add2_label_text">Street Address 2 (Optional)</string>
    <string name="add_address_city_label_text">City</string>
    <string name="add_address_state_label_text">State/Province/Region</string>
    <string name="add_address_phone_label_text">Phone Number</string>
    <string name="county_hint">India</string>
    <string name="add_address_zipcode_label_text">Zip Code</string>
    <string name="person_name">%s</string>
    <string name="save_address_error_text">Error Saving Address!</string>
    <string name="ship_to_error_empty">Please select an address!</string>
    <string name="delete_address_message_text">On clicking Delete, Address will be deleted premanently!</string>
    <string name="delete_category_message_text">By clicking Delete, Category will be deleted permanently!</string>
    <string name="delete_product_message_text">By clicking Delete, Product will be deleted permanently!</string>
    <string name="canceled_order_message_text">You want to cancel this order? :(</string>
    <string name="plus_btn_desc">Increase Button</string>
    <string name="minus_btn_desc">Decrease Button</string>
    <string name="delete_cart_item_message_text">On Proceeding, selected Item will be deleted from your Cart.</string>
    <string name="buy_now_btn_text">Buy Now</string>
    <string name="home_app_bar_favorites_label">Favorites</string>
    <string name="no_likes_text">No Products Liked Yet!</string>
    <string name="home_ad_image_desc">Advertisement</string>
    <string name="bottom_nav_home_label">Home</string>
    <string name="bottom_nav_category_label">Category</string>
    <string name="bottom_nav_product_label">Product</string>
    <string name="bottom_nav_account_label">Account</string>
    <string name="pay_by_title">Choose Payment Method</string>
    <string name="pay_by_next_btn_text">Pay $%s</string>
    <string name="pay_by_error_empty">Select a payment method!</string>
    <string name="back_to_home_text">Back To Home</string>
    <string name="success_img_desc">Success Tick Image</string>
    <string name="success_label">Success</string>
    <string name="order_success_message_text">thank you for shopping</string>
    <string name="no_items_in_cart_text">No Products Added Yet!</string>
    <string name="bottom_nav_orders_label">Orders</string>
    <string name="account_profile_label">Profile</string>
    <string name="account_orders_label">Orders</string>
    <string name="account_reviews_label">Reviews</string>
    <string name="account_address_label">Address</string>
    <string name="account_fragment_title">Account</string>
    <string name="account_sign_out_label">Sign Out</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="reset_password">Reset\npassword</string>
    <string name="reset_password_hint">NEW PASSWORD</string>
    <string name="back_to_login">Back to Login</string>
    <string name="reset_btn_text">Reset</string>
    <string name="retype_reset_password_hint">RETYPE NEW PASSWORD</string>
    <string name="retype_reset_password_ph">Retype Password</string>
</resources>