<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.order.order.OrderSuccessFragment">

    <ImageView
        android:id="@+id/order_success_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="34dp"
        android:contentDescription="@string/success_img_desc"
        app:layout_constraintBottom_toTopOf="@+id/order_success_label_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/order" />

    <TextView
        android:id="@+id/order_success_label_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_sans"
        android:textAlignment="center"
        android:paddingHorizontal="12dp"
        android:text="Congrats, you've successfully bought our excellent products"
        android:textAppearance="@style/TextAppearance.MyTheme.Headline6"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.54"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.6" />

    <TextView
        android:id="@+id/order_success_message_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/order_success_message_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline2" />


    <Button
        android:id="@+id/back_to_home_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="16dp"
        android:backgroundTint="@color/blue_accent_300"
        android:padding="16dp"
        android:text="@string/back_to_home_text"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/order_success_message_tv" />

    <TextView
        android:clickable="true"
        android:id="@+id/tvViewOrder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/blue_200"
        android:layout_marginTop="8dp"
        android:text="View Order Details"
        android:textAllCaps="false"
        android:padding="10dp"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/back_to_home_btn"
        app:layout_constraintTop_toBottomOf="@+id/back_to_home_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>