<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/category_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    app:cardElevation="0dp"
    app:strokeColor="#CCCCCC"
    app:strokeWidth="1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp">

        <ImageView
            android:id="@+id/category_image_view"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/round_outline_rect"
            android:contentDescription="@string/add_img_item_desc"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />
        <TextView
            android:id="@+id/category_name_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:layout_marginStart="15dp"
            android:textAppearance="@style/TextAppearance.MyTheme.Subtitle1"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/btDelete"
            app:layout_constraintStart_toEndOf="@id/category_image_view"
            app:layout_constraintTop_toTopOf="@id/category_image_view"
            tools:text="Milk and milk products">
        </TextView>

        <TextView
            android:id="@+id/tvNumberOfProduct"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:textAppearance="@style/TextAppearance.MyTheme.Subtitle1"
            app:layout_constraintEnd_toStartOf="@+id/btEdit"
            app:layout_constraintStart_toStartOf="@id/category_name_tv"
            app:layout_constraintTop_toBottomOf="@id/category_name_tv"
            tools:text="25 products" />
        <ImageView
            android:id="@+id/btDelete"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="32dp"
            android:background="@drawable/round_button"
            android:contentDescription="@string/pro_details_delete_btn_desc"
            android:scaleType="centerCrop"
            android:layout_margin="5dp"
            app:layout_constraintTop_toTopOf="@id/category_name_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_delete_24"
            app:tint="@color/gray" />
        <Button
            android:id="@+id/btEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/edit_btn_text"
            android:backgroundTint="@color/blue_accent_300"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btDelete"
            app:layout_constraintVertical_bias="1"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
